public interface Sensor {
    void detectarOcupacion();

    void detectarLibreracion();
}
